<resources>
    <string name="app_name">paytel</string>
    <string name="title_activity_authenticate_user">PAyTEL_user</string>
    <string name="title_activity_authenticatoractivity">PAyTEL</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Transactions</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message"></string>


    <!-- DetectFaces API -->
    <string-array name="poses">
        <item>frown</item> <!-- emotion = sad -->
        <item>close eyes</item> <!-- eyesOpen = no -->
        <item>mouth open</item> <!-- mouthOpen = yes -->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exp_date">Exp date</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="cvv">CVV</string>
    <string name="name_on_card">Name on card</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="welcome_to_paytel">Welcome to PAyTEL!</string>
    <string name="now_let_s_get_your_profile_setup">Now let\'s get your profile setup...</string>
    <string name="paytel_logo">PAyTEL logo</string>
    <string name="complete">COMPLETE</string>
    <string name="complete_message">You\'re all setup to start making secure transactions on PAyTEL</string>
    <string name="congratulations">Congratulations! Here is $100 to start off!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="State">State</string>

    <string-array name="states_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="settings_array">
        <item>Edit Profile</item>
        <item>Change Payment Method</item>
        <item>Change Billing Address</item>
        <item>Sign Out</item>
    </string-array>
</resources>
